; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asynctest.c_test_ASYNC_callback_status.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asynctest.c_test_ASYNC_callback_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"test_ASYNC_callback_status() failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_ASYNC_callback_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_ASYNC_callback_status() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32 (i8*)*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* null, i32** %2, align 8
  store i32 100, i32* %3, align 4
  store i32 1, i32* %6, align 4
  %7 = call i32 @ASYNC_init_thread(i32 1, i32 0)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %44

9:                                                ; preds = %0
  %10 = call i32* (...) @ASYNC_WAIT_CTX_new()
  store i32* %10, i32** %2, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %44, label %12

12:                                               ; preds = %9
  %13 = load i32*, i32** %2, align 8
  %14 = bitcast i32* %3 to i8*
  %15 = call i32 @ASYNC_WAIT_CTX_set_callback(i32* %13, i32 (i8*)* @test_callback, i8* %14)
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %44, label %17

17:                                               ; preds = %12
  %18 = load i32*, i32** %2, align 8
  %19 = bitcast i32 (i8*)** %4 to i32 (i8*)*
  %20 = call i32 @ASYNC_WAIT_CTX_get_callback(i32* %18, i32 (i8*)* %19, i8** %5)
  %21 = icmp ne i32 %20, 1
  br i1 %21, label %44, label %22

22:                                               ; preds = %17
  %23 = load i32 (i8*)*, i32 (i8*)** %4, align 8
  %24 = icmp ne i32 (i8*)* @test_callback, %23
  br i1 %24, label %44, label %25

25:                                               ; preds = %22
  %26 = load i8*, i8** %5, align 8
  %27 = bitcast i32* %3 to i8*
  %28 = icmp ne i8* %26, %27
  br i1 %28, label %44, label %29

29:                                               ; preds = %25
  %30 = load i32 (i8*)*, i32 (i8*)** %4, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = call i32 %30(i8* %31)
  %33 = icmp ne i32 %32, 1
  br i1 %33, label %44, label %34

34:                                               ; preds = %29
  %35 = load i32*, i32** %2, align 8
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @ASYNC_WAIT_CTX_set_status(i32* %35, i32 %36)
  %38 = icmp ne i32 %37, 1
  br i1 %38, label %44, label %39

39:                                               ; preds = %34
  %40 = load i32, i32* %6, align 4
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @ASYNC_WAIT_CTX_get_status(i32* %41)
  %43 = icmp ne i32 %40, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %39, %34, %29, %25, %22, %17, %12, %9, %0
  %45 = load i32, i32* @stderr, align 4
  %46 = call i32 @fprintf(i32 %45, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %47 = load i32*, i32** %2, align 8
  %48 = call i32 @ASYNC_WAIT_CTX_free(i32* %47)
  %49 = call i32 (...) @ASYNC_cleanup_thread()
  store i32 0, i32* %1, align 4
  br label %54

50:                                               ; preds = %39
  %51 = load i32*, i32** %2, align 8
  %52 = call i32 @ASYNC_WAIT_CTX_free(i32* %51)
  %53 = call i32 (...) @ASYNC_cleanup_thread()
  store i32 1, i32* %1, align 4
  br label %54

54:                                               ; preds = %50, %44
  %55 = load i32, i32* %1, align 4
  ret i32 %55
}

declare dso_local i32 @ASYNC_init_thread(i32, i32) #1

declare dso_local i32* @ASYNC_WAIT_CTX_new(...) #1

declare dso_local i32 @ASYNC_WAIT_CTX_set_callback(i32*, i32 (i8*)*, i8*) #1

declare dso_local i32 @test_callback(i8*) #1

declare dso_local i32 @ASYNC_WAIT_CTX_get_callback(i32*, i32 (i8*)*, i8**) #1

declare dso_local i32 @ASYNC_WAIT_CTX_set_status(i32*, i32) #1

declare dso_local i32 @ASYNC_WAIT_CTX_get_status(i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @ASYNC_WAIT_CTX_free(i32*) #1

declare dso_local i32 @ASYNC_cleanup_thread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
